--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^6.2.6",
     "fullpage.js": "^3.1.2",
     "gsap": "^3.9.1",
     "react": "^17.0.2",
