--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "date-and-time": "^2.2.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.6",
     "fullpage.js": "^3.1.2",
